test/Fail/Issue4586LetPatternDot.err
Issue4586LetPatternDot.agda:7.12-15: error: [VariableIsIrrelevant]
Variable Set is declared irrelevant, so it cannot be used here
when checking that the expression Set₁ has type Set₁
